Prevent message preview copy from overlapping - remove style for empty cells [ch1086]

--- a/src/styles/leo-provider-app.styl
+++ b/src/styles/leo-provider-app.styl
@@ -422,6 +422,12 @@
     background-color: #FFFFFF!important;
   }
 
+  .list-group-item > .escalated-to:empty {
+    border: none!important;
+    color: transparent!important;
+    background-color: transparent!important;
+  }
+
   /*Recipient Field*/
   .recipient-field-container {
     width: 100%;
